# luau-in-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  package.json  script.luau
assets/: script.luau
demo/: CMakeLists.txt  main.cpp  script.luau
demo/resources/: script.luau
demo/src/: main.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt
tests/include/: test.h
tests/resources/: existing-script.luau  existing-variables.luau  variable-primary.luau
tests/src/: main.cpp  moveOperatorTests.cpp  test.cpp  variablesTests.cpp
tomato/: CMakeLists.txt
tomato/include/: Context.h  Exceptions.h  Luau.h  LuauContext.h  LuauDebug.h  LuauError.h  LuauException.h  LuauExceptions.h  LuauGetters.tcc  LuauGlobals.h  LuauPops.tcc  LuauReader.h  LuauScript.h  LuauState.h  Reader.h
tomato/src/: Context.cpp  Exceptions.cpp  LuauContext.cpp  LuauDebug.cpp  LuauError.cpp  LuauException.cpp  LuauExceptions.cpp  LuauGlobals.cpp  LuauReader.cpp  LuauScript.cpp  LuauState.cpp  Reader.cpp
